(feature) Copy updates for pages and describe repair forms
Pages:

 - Emergency contact page
 - Service start page
 - Emergency filter page (questions/start)
 - Carbon monoxide alarm
 - Gas
 - Heating repairs
 - Home adaptations
 - Check fusebox
 - Damp and mould
 - Electrical hazard warning
 - Replace lightbulb
 - Smoke detector beeping
 - Toilet unblocking

Describe repair forms:

 - Generic response
 - Kitchen cupboards
 - Kitchen extractor fan
 - Kitchen light fitting
 - Kitchen light switch
 - Communal boiler
 - Basin leaking
 - Bath leaking
 - Toilet damaged
 - Toilet leaking
 - Boiler
 - Broken tap
 - Kitchen sink leaking
 - Window damage
 - Window not shutting
 - External door stiff
 - External door lock
 - Internal door
 - Sockets

--- a/app/views/describe_repair/_inside_bathroom_toilet_damaged.html.haml
+++ b/app/views/describe_repair/_inside_bathroom_toilet_damaged.html.haml
@@ -1,12 +1,10 @@
 %h1
   Please let us know any additional details you think might help us
 
-
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem
-  %li
-    whether there is any obvious damage to the item
+    how the toilet is damaged
+
