--- a/app/views/describe_repair/_inside_bathroom_toilet_leaking.html.haml
+++ b/app/views/describe_repair/_inside_bathroom_toilet_leaking.html.haml
@@ -1,12 +1,13 @@
 %h1
   Please let us know any additional details you think might help us
 
-
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem
+    where the leak appears to be coming from
   %li
-    whether there is any obvious damage to the item
+    whether there is any obvious damage to the toilet
+
+
