--- a/app/views/describe_repair/_inside_boiler.html.haml
+++ b/app/views/describe_repair/_inside_boiler.html.haml
@@ -1,12 +1,12 @@
 %h1
   Please let us know any additional details you think might help us
 
-
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem
+    whether there is an error message on your boiler
   %li
-    whether there is any obvious damage to the item
+    if the problem has happened previously
+
