--- a/app/views/describe_repair/_inside_kitchen_light_switch.html.haml
+++ b/app/views/describe_repair/_inside_kitchen_light_switch.html.haml
@@ -1,12 +1,11 @@
 %h1
   Please let us know any additional details you think might help us
 
-
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem
+    the type of problem with the light switch
   %li
-    whether there is any obvious damage to the item
+    whether there is any obvious damage to the switch
