--- a/app/views/pages/check_fusebox.html.haml
+++ b/app/views/pages/check_fusebox.html.haml
@@ -1,7 +1,27 @@
 = back_link
 
 %h1
-  Check your fusebox
+  Checking the fuse box
 
 %p
-  Instructions to help the resident locate and check their fusebox.
+  If your light is not working, it may be that the corresponding trip switch
+  in your fuse box is not in the correct position. Please check your fuse
+  box and ensure that the switch is in the 'ON' position.
+
+%p
+  The fuse box is typically located in the hallway cupboard. If you would
+  like help locating the fuse box in your home, please call the repairs
+  contact centre on 020 8356 2300.
+
+%p
+  %strong
+    Warning:
+  If you are replacing any light bulbs in your home, please ensure you have
+  flicked the relevant trip switch to the 'OFF' position.
+  If you have any doubts, please contact us for guidance.
+
+%p
+  If you have checked the switch and the light is still not working, please
+  select continue to book an appointment
+
+%p= link_to 'Continue', describe_repair_path, class: 'button'
