--- a/app/views/pages/smoke_detector.html.haml
+++ b/app/views/pages/smoke_detector.html.haml
@@ -1,14 +1,11 @@
-= back_link
-
 %h1
-  Emergency repairs
-
-%h2
-  The problem you're having may need immediate attention
+  Smoke detector beeping
 
 %p
-  We ask that you report Emergency and Immediate repair problems through our Repairs Contact Centre.
-  This will allow us to review your repair straight away and schedule a suitable appointment to help resolve the issue quickly.
+  If your smoke detector or fire alarm is beeping please call the
+  repairs contact centre. This will allow us to review the problem
+  as a priority and schedule a suitable appointment to help
+  resolve the issue quickly.
 
 %p
   %strong
@@ -26,7 +23,7 @@
   damage to your property, please call:
   %strong
     %span{ itemprop: 'telephone' }
-      %a{ href: 'tel:02083562300' }020 8356 2300
+      %a{ href: 'tel:02083562300' } 020 8356 2300
 
 %p
   %strong
@@ -42,6 +39,6 @@
 
 %p
   %strong
-    For gas:
+    For gas, call National Grid:
   %span{ itemprop: 'telephone' }
     %a{ href: 'tel:0800111999' } 0800 111 999
