--- a/app/views/pages/start.html.haml
+++ b/app/views/pages/start.html.haml
@@ -2,16 +2,17 @@
   Report a repair
 
 %p.lede
-  We provide housing and communal area repairs for our Hackney residents.
+  We provide housing and communal area repairs for council tenants,
+  and communal repairs for leaseholders.
 
 %p
   You can use this service to:
 
 %ul
   %li
-    report the most common problems with your home
+    report non-emergency repairs to your home
   %li
-    learn how to solve common repair types with how-to videos
+    choose a date and time for us to carry out the repair
 
 %p
   Reporting a repair should take around 5 minutes.
@@ -32,12 +33,33 @@
   %a.button.button-start{ href: '/questions/start/' } Start
 
 %h2
-  Before you start
+  Emergency and urgent repairs
 
 %p
-  You are responsible for any home improvements you have carried out yourself.
+  If your repair is an emergency, please call the
+  Repairs Contact Centre on
+  %span{ itemprop: 'telephone' }
+    = succeed '.' do
+      %a{ href: 'tel:02083563691' } 020 8356 3691
 
 %p
-  If your home is managed by a
-  %abbr{ title: 'Tenant Management Organisation' } TMO
-  please contact them first for help with repairs.
+  They are open
+  %strong
+    Monday&ndash;Friday, 8am&ndash;7pm
+  and
+  %strong
+    Saturday, 9am&ndash;1pm
+
+%h2
+  Home improvements
+
+%p
+  Please note, you are responsible for any home improvements you carry
+  out yourself.
+
+%h2
+  Tenant Management Organisation (TMO)
+
+%p
+  If your home is managed by a TMO, please contact them first for
+  help with repairs.
