--- a/app/views/pages/toilet_unblock_info.html.haml
+++ b/app/views/pages/toilet_unblock_info.html.haml
@@ -1,8 +1,21 @@
-%h1 Toilet blocked?
+= back_link
 
-%p It's pretty straightforward to unblock a toilet, you'll need:
+%h1
+  Common repairs - unblock toilet
 
-%ul
-  %li A large bin bag
-  %li A mop
+%h2
+  Watch this brief video to find out how to unblock your toilet
 
+%iframe{ width: '560', height: '315', src: 'https://www.youtube.com/embed/_zzMhYpaD-o?rel=0&amp;showinfo=0', frameborder: '0', allowfullscreen: true }
+
+%p
+  If your toilet is still blocked, please call our repairs contact
+  centre so that we can help resolve this and schedule a
+  suitable appointment.
+
+%p
+  Please call the repairs contact centre on
+  %strong
+    020 8356 2300
+  Monday&ndash;Friday 8am&ndash;7pm and
+  Saturday 9am&ndash;1pm.
