--- a/app/views/describe_repair/_inside_kitchen_broken_tap.html.haml
+++ b/app/views/describe_repair/_inside_kitchen_broken_tap.html.haml
@@ -1,12 +1,12 @@
 %h1
   Please let us know any additional details you think might help us
 
-
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem
+    how the tap is broken
   %li
-    whether there is any obvious damage to the item
+    the type of tap, if you know it - for example, pillar or mixer
+
