--- a/app/views/describe_repair/_inside_sockets.html.haml
+++ b/app/views/describe_repair/_inside_sockets.html.haml
@@ -1,12 +1,13 @@
 %h1
   Please let us know any additional details you think might help us
 
-
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem
+    the type of problem with the socket
   %li
-    whether there is any obvious damage to the item
+    whether it is a single or double socket
+
+
