--- a/app/views/describe_repair/_other_external_door_lock.html.haml
+++ b/app/views/describe_repair/_other_external_door_lock.html.haml
@@ -1,12 +1,12 @@
 %h1
   Please let us know any additional details you think might help us
 
-
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem
+    the type of problem with the lock
   %li
-    whether there is any obvious damage to the item
+    whether there is any obvious damage to the lock
+
