--- a/app/views/describe_repair/_other_external_door_stiff.html.haml
+++ b/app/views/describe_repair/_other_external_door_stiff.html.haml
@@ -1,12 +1,11 @@
 %h1
   Please let us know any additional details you think might help us
 
-
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem
+    how the movement of the door is affected
   %li
-    whether there is any obvious damage to the item
+    whether there is any obvious damage to the door
