--- a/app/views/pages/address_isnt_here.html.haml
+++ b/app/views/pages/address_isnt_here.html.haml
@@ -8,7 +8,7 @@
 
 %p
   If you are one of our tenants, please call our repair centre on
-  %a{ href: 'tel:02083563691' } 020 8356 3691
+  = repairs_contact_centre_telephone_number
   so we can help you with your problem.
 
 %p
