--- a/app/views/pages/gas.html.haml
+++ b/app/views/pages/gas.html.haml
@@ -18,6 +18,5 @@
     Open doors and windows to ventilate the area
   %li
     Contact National Grid on
-    %strong
-      0800 111 999
+    %strong= gas_emergency_telephone_number
     from outside the property
