--- a/app/views/pages/heating_repairs.html.haml
+++ b/app/views/pages/heating_repairs.html.haml
@@ -15,7 +15,6 @@
 
 %p
   Please call the repairs contact centre on
-  %strong
-    020 8356 2300
+  %strong= repairs_contact_centre_telephone_number
   Monday to Friday 8am to 7pm and
   Saturday 9am to 1pm.
