--- a/app/views/pages/home_adaptations.html.haml
+++ b/app/views/pages/home_adaptations.html.haml
@@ -11,8 +11,7 @@
 
 %p
   Please call the repairs contact centre on
-  %strong
-    020 8356 2300
+  %strong= repairs_contact_centre_telephone_number
   Monday to Friday 8am to 7pm and
   Saturday 9am to 1pm.
 
