--- a/app/views/pages/style_guide.html.haml
+++ b/app/views/pages/style_guide.html.haml
@@ -31,7 +31,7 @@
 
   %strong
     If you smell gas, please call National Gas Emergency on
-    %a{ href: 'tel:0800111999' } 0800 111 999
+    = gas_emergency_telephone_number
     for assistance.
 
 %ul
