--- a/app/views/pages/check_fusebox.html.haml
+++ b/app/views/pages/check_fusebox.html.haml
@@ -11,7 +11,9 @@
 %p
   The fuse box is typically located in the hallway cupboard. If you would
   like help locating the fuse box in your home, please call the repairs
-  contact centre on 020 8356 2300.
+  contact centre on
+  = succeed '.' do
+    = electricity_emergency_telephone_number
 
 %p
   %strong
