--- a/app/views/pages/electrical_hazard_warning.html.haml
+++ b/app/views/pages/electrical_hazard_warning.html.haml
@@ -11,7 +11,9 @@
 %p
   If you are uncertain or have any immediate concerns about an electrical
   repair issue in your home, please call our repairs contact centre for
-  guidance on 020 8356 2300.
+  guidance on
+  = succeed '.'
+    = electricity_emergency_telephone_number
 
 %p
   If you would like to book an appointment for your electrical repair,
