Add repair as button and notice on description page
Resolves trello card
https://trello.com/c/CApWT7jI/64-improve-add-another-repair-design-on-relevant-pages

Made the 'add another repair' link more visible.
Added a notice to the user on repair description page, asking to report
one repair at a time.

For the users wanting to report multiple repairs this would give an
indication that it's possible and doesn't require writing multiple repairs
in the free text area on repair description page.

--- a/app/assets/stylesheets/components/main.scss
+++ b/app/assets/stylesheets/components/main.scss
@@ -95,4 +95,14 @@ main {
       font-weight: bold;
     }
   }
+
+  .info-notice {
+    border-left: 1em solid #dee0e2;
+    padding: 1em 0 1em 1em;
+    margin: 0 0 2em 0;
+
+    p:last-child, ul:last-child, ol:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
