--- a/app/views/confirmations/_callback.html.haml
+++ b/app/views/confirmations/_callback.html.haml
@@ -3,6 +3,8 @@
   %strong= callback.time
   to arrange a repair appointment.
 
+= link_to "Report another repair", questions_start_path(keep_address: true), class: 'button'
+
 %p
   %strong
     If you have any questions, please call us on
